--- a/BulkyBookWeb/Views/Category/Create.cshtml
+++ b/BulkyBookWeb/Views/Category/Create.cshtml
@@ -25,4 +25,9 @@
         </a>
     </div>
 </form>
+@section Scripts {
+    @{
+        <partial name="_ValidationScriptPartial"></partial>
+    }
+}
 
